# rinter

./: Cargo.toml  README.md  rust-toolchain.toml
src/: main.rs
src/tasks/: mod.rs
src/tasks/v0/: bitmap.rs  cut.rs  mod.rs  text.rs
