[package]
name = "rinter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
escpos = { version = "0.12.2", features = ["graphics", "usb"] }
tokio = { version = "1.39.2", features = ["rt-multi-thread"] }
