[package]
name = "rinter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.13", features = ["derive"] }
eyre = "0.6.12"

axum = "0.7.5"
tokio = { version = "1.39.2", features = ["rt-multi-thread"] }
futures = "0.3.30"

escpos = { version = "0.12.2", features = ["graphics", "native_usb"] }
